--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.10",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.5.0",
     "react-responsive": "^10.0.0",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
