--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.7",
+    "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.8.0",
