--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-router-dom": "^5.3.3",
     "apexcharts": "^3.54.1",
